--- a/gtk-4.0/widgets/_menus.scss
+++ b/gtk-4.0/widgets/_menus.scss
@@ -30,7 +30,6 @@ menu,
   margin: 4px;
   padding: 2px 0px;
   background: if( $variant == 'light',  linear-gradient(to bottom, #fff 20%, #fff), linear-gradient(to bottom, lighten($bg_color, 2%), darken($bg_color, 2%)));
-  border: 1px solid $borders_color; // adds borders in a non composited env
   border-radius: 5px;
 
   .csd & { border: none; }  // axes borders in a composited env
